@@ -5,12 +5,6 @@
   <!-- Control panel template, placeholders to be filled in with internationalized strings using tpl. -->
 
   <div class="btn-group btn-group-vertical">
-    <button class="btn v-button" id="showPerformanceMonitorCheckBox">
-      <p>
-        <i class="icon-check-empty" style="float:left; margin-right: 5px; font-size: larger;"/>
-        <%= showPerformanceMonitor %>
-      </p>
-    </button>
     <button class="btn v-button" id="flipPolarityButton">
       <p>
         <%= flipPolarity %>
