@@ -2,7 +2,6 @@
 define(
   {
     "title": "Simulation par Exemple",
-    "showPerformanceMonitor": "Analyseur de Performances",
     "flipPolarity":"Polarit\u00E9 Intervt",
     "resetAll": "Tout remettre \u00E0 z\u00E9ro"
   } );
