@@ -2,7 +2,6 @@
 define(
   {
     "title": "Simulation Example",
-    "showPerformanceMonitor": "Show Performance Monitor",
     "flipPolarity": "Flip Polarity",
     "resetAll": "Reset All"
   } );
