@@ -1,3 +1,4 @@
+4/23/13 delete "Show Performance Monitor" control, joist doesn't support it
 4/23/13 specify background color for tab that is passed to Sim
 4/23/13 rename ExampleSimScene to ExampleSimView, since it is not a scene
 4/23/13 remove some clearly-obsolete cruft from example-sim.css
